--- a/package.json
+++ b/package.json
@@ -27,13 +27,18 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.4",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.1",
     "@prisma/client": "^5.10.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
+    "firebase": "^10.8.1",
+    "firebase-admin": "^12.0.0",
     "mongoose": "^8.1.3",
     "nestjs-zod": "^3.0.0",
     "prisma": "^5.10.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
